// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar component Matches snapshot 1`] = `
<nav
  className="navbar"
  data-testid="navbar"
>
  <div
    className="navbar_logo"
  >
    <h2 />
  </div>
  <div
    className="hamburger_menu"
  >
    <div />
    <div />
    <div />
  </div>
</nav>
`;

exports[`Navbar component Matches snapshot with title=Truck App 1`] = `
<nav
  className="navbar"
  data-testid="navbar"
>
  <div
    className="navbar_logo"
  >
    <h2>
      Truck App
    </h2>
  </div>
  <div
    className="hamburger_menu"
  >
    <div />
    <div />
    <div />
  </div>
</nav>
`;
